<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#26a69a"
        tools:context=".view.SettingsActivity">

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expInAppBillingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:layout_marginBottom="16dp"
            app:ael_expanded="true"
            app:ael_duration="500"
            app:ael_interpolator="bounce"
            app:ael_orientation="vertical">

        <TextView
                android:id="@+id/proTv"
                android:text="@string/pro_upgrade_desc"
                android:maxLines="10"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/upgrProBtnLayout"
                android:layout_below="@id/proTv"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/rounded_button" >

            <ImageView
                    android:id="@+id/proIconImgView"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/verified_user_black"/>

            <TextView
                    android:id="@+id/upgrdNowTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="center"
                    android:text="@string/pro_upgrade_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />
        </LinearLayout>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <ScrollView
            android:layout_below="@+id/expInAppBillingLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:text="@string/dateformat_label"
                    android:textColor="@color/colorSettingsPaid"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:id="@+id/dateFormSpinner"
                    app:ms_background_color="@color/colorPrimary"
                    app:ms_text_color="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View android:layout_width="match_parent"
                  android:layout_marginBottom="12dp"
                  android:background="@android:color/darker_gray"
                  android:layout_height="1dp"/>

            <LinearLayout
                    android:id="@+id/llWordNum"
                    android:orientation="vertical"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tvWordNumLabel"
                        android:text="@string/numof_word_label"
                        android:textColor="@color/colorSettingsUnpaid"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"/>
                <TextView
                        android:text="30"
                        android:textSize="20sp"
                        android:textColor="@color/colorSettingsUnpaid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvWordNumVal"/>

            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_marginBottom="12dp"
                  android:background="@android:color/darker_gray"
                  android:layout_height="1dp"/>

            <TextView
                    android:id="@+id/stopWordLabel"
                    android:text="@string/stopword_title"
                    android:textColor="@color/colorSettingsUnpaid"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"/>

            <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:weightSum="1"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/stopword_hint"
                        android:textColorHint="#424242"
                        android:ems="10"
                        android:id="@+id/edxStopWord"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.8"/>

                <Button
                        android:id="@+id/addStopWordBtn"
                        android:text="+"
                        android:textAlignment="center"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorSettingsUnpaid"
                        android:background="@drawable/rounded_button_greenbkg"
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_marginBottom="12dp"
                  android:background="@android:color/darker_gray"
                  android:layout_height="1dp"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_stopword_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>